--- a/src/Card_Component.css
+++ b/src/Card_Component.css
@@ -5,10 +5,43 @@
     border-radius: 10px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
+    background-color: #85aba8;
 }
 
+.business_name {
+    font-size: 3em;
+    font-family: Garamond, serif;
+    color: #ffffff;
+    margin: 5%;
+}
 
-p {
+.business_description, .business_rating {
     font-family: Verdana, Tahoma, sans-serif;
     font-size: 1.25em;
+    color: #ffffff;
+    margin: 5%;
 }
+
+.card_image {
+    max-width: 50%;
+    /* max-height: 50%; */
+    height: auto;
+}
+
+.settings-button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0;
+  }
+  
+  .dot {
+    height: 8px;
+    width: 8px;
+    background-color: #333; /* Color of the dots */
+    border-radius: 50%;
+    margin: 2px 0; /* Space between dots */
+  }
