--- a/src/Header.css
+++ b/src/Header.css
@@ -1,30 +1,38 @@
-img {
+/* Image styling */
+.head img {
     width: 100px;
     height: 100px;
-    margin-right: 20px;
+    margin-right: 20px; /* Space between image and h1 */
     border-radius: 10px;
 }
 
+/* Body background color */
+body {
+    background-color: #254441;
+}
+
+/* Header styling */
 .head {
     display: flex;
     align-items: center;
-    background-color: #ffffff;
+    justify-content: space-between; /* Space between the logo and the button */
+    padding: 10px;
     border-radius: 10px;
 }
 
-h1 {
+/* Site title styling */
+.site_name {
     font-size: 3em;
-    font-family: Verdana, Tahoma, sans-serif;
-    background-image: linear-gradient(to top, #2E7D32 0%, #FF5722 100%);
-    background-size: 100%;
-    background-clip: text;
-    -moz-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -moz-text-fill-color: transparent;
+    font-family: Garamond, serif;
+    color: #ffffff;
     margin: 0;
     padding: 0;
+    margin-left: 20px; /* Add space between the image and the h1 */
+    flex-grow: 1; /* Allow h1 to take up remaining space */
+    text-align: left; /* Align the h1 slightly to the right of the image */
 }
 
+/* Login button styling */
 .logInButton {
     width: 100px;
     height: 100px;
@@ -34,7 +42,5 @@ h1 {
     background-repeat: no-repeat;
     border: none;
     cursor: pointer;
-    margin-left: 35%;
     border-radius: 30%;
-    align-items: center;
 }
