--- a/src/SearchBar_Component.css
+++ b/src/SearchBar_Component.css
@@ -12,4 +12,6 @@
     width: 550px;
     border: 5px solid;
     border-radius: 25px;
+    border-color: rgb(105, 57, 57);
+    background-color: #A44A3F;
 }
