--- a/src/Filter_Bar.css
+++ b/src/Filter_Bar.css
@@ -1,4 +1,4 @@
-.FilterBar {
+/* .FilterBar { */
     /* font-size: 3em;
     font-family: Garamond, serif;
     color: #ffffff;
@@ -8,7 +8,7 @@
     height: 100%;
     width: 300px; */
 
-    height: 100%;
+    /* height: 100%;
     width: 0;
     position: fixed;
     top: 0;
@@ -17,10 +17,10 @@
     overflow-x: hidden;
     transition: 0.3s;
     z-index: 999; /* Ensure it sits on top of content */
-    padding-top: 60px;
-}
+    /* padding-top: 60px; */
+/* } */
   
-  .FilterBar.open {
+  /* .FilterBar.open {
     width: 250px;
   }
   
@@ -38,4 +38,11 @@
   .FilterBar li:hover {
     background-color: #575757;
     cursor: pointer;
+  } */
+
+  .filter {
+    width: 10vh;
+    height: 90vh;
+    background-color: #85aba8;
+    border-radius: 10px;
   }
