--- a/src/Filter_Bar.css
+++ b/src/Filter_Bar.css
@@ -41,7 +41,9 @@
   } */
 
   .filter {
-    width: 10vh;
+    font-size: 0.75vw;
+    font-family: Garamond, serif;
+    width: 15vh;
     height: 90vh;
     background-color: #85aba8;
     border-radius: 10px;
