--- a/src/SignUp.css
+++ b/src/SignUp.css
@@ -1,24 +1,94 @@
-/* body {
-    background-color: #254441;
+.block {
+    background-color: #85aba8;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
+    width: 300px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.head {
-    font-size: 3em;
-    font-family: Garamond, serif;
-    color: #ffffff;
+.signup-text {
+    color: white;
+    text-align: center;
+    margin-top: 15px
 }
 
-.field_label {
-    font-family: Verdana, Tahoma, sans-serif;
-    font-size: 1.25em;
-    color: #ffffff;
-}
-/*
-.text_input {
-
+.form-group {
+    width: 100%;
+    margin-bottom: 15px;
 }
 
-.create_button {
-
+label {
+    display: block;
+    margin-bottom: 3px;
+    color: white;
 }
-*/
+
+input {
+    width: 100%;
+    padding: 8px;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 1em;
+}
+
+button {
+    width: 100%;
+    padding: 10px;
+    background-color: white;
+    border: none;
+    color: #333;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+button:hover {
+    background-color: orange;
+}
+
+.password-strength div {
+    height: 5px;
+    border-radius: 4px;
+    margin-top: 5px;
+}
+
+.weak {
+    width: 33%;
+    background-color: red;
+}
+
+.medium {
+    width: 66%;
+    background-color: orange;
+}
+
+.strong {
+    width: 100%;
+    background-color: green;
+}
+
+/* Error messages */
+.error {
+    color: red;
+    font-size: 0.9em;
+}
+
+/* Password hint */
+.password-hint {
+    font-size: 0.9em;
+    color: #666;
+    margin-top: 5px;
+    display: block;
+}
+
+/* Success message */
+.success {
+    color: green;
+    text-align: center;
+    margin-top: 20px;
+}
