--- a/src/features/authentication/logging-in/Login.css
+++ b/src/features/authentication/logging-in/Login.css
@@ -1,36 +1,82 @@
-.login-text {
-    color: white;
-    text-align: center;
-    margin-top: 15px;
-}
-.Login_logo{
-    width: 150px;
-    height: 150px;
-    margin-right: 0px; 
-    border-radius: 10px;
-    margin-top: 10px;
-}
-.square {
+.block {
     background-color: #85aba8;
-    width: 25em;
-    height: 25em;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
+    width: 450px;
+    height: 400px;
     margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.login_image {
+    width: 100px;
+    height: 100px;
     border-radius: 10px;
+    align-items: center;
 }
-.username {
+.mainContainer {
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+  }
+  
+  .titleContainer {
+    display: flex;
     color: white;
-    text-align: center;
-    margin-top: 20px;
-}
-.password {
-    color: white;
-    text-align: center;
-}
-#Username
-    {width: 100;
-        border-radius: 5px;
-}
-#Password
-    {width: 100;
-        border-radius: 5px;
-}
+    flex-direction: column;
+    font-size: 25px;
+    font-weight: bolder;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .resultContainer,
+  .historyItem {
+    flex-direction: row;
+    display: flex;
+    width: 400px;
+    align-items: center;
+    justify-content: space-between;
+  }
+  
+  .historyContainer {
+    flex-direction: column;
+    display: flex;
+    height: 200px;
+    align-items: center;
+    flex-grow: 5;
+    justify-content: flex-start;
+  }
+  
+  .buttonContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 260px;
+  }
+  
+  .email {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+  }
+  
+  .inputContainer > .errorLabel {
+    color: red;
+    font-size: 12px;
+  }
+  
+  .inputBox {
+    height: 24px;
+    width: 250px;
+    font-size: large;
+    border-radius: 8px;
+    border: 1px solid grey;
+    padding-left: 8px;
+  }
