--- a/src/features/filtering/Filter_Bar.css
+++ b/src/features/filtering/Filter_Bar.css
@@ -1,71 +1,80 @@
-/* .FilterBar { */
-    /* font-size: 3em;
-    font-family: Garamond, serif;
-    color: #ffffff;
-    margin: 0;
-    padding: 0;
-    background-color:  #254441;
-    height: 100%;
-    width: 300px; */
+.filter {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  background-color: #8a7751;
+  color: #fff;
+  padding: 1rem;
+  width: 18vh;
+  border-radius: 16px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  width: 12rem;
+}
 
-    /* height: 100%;
-    width: 0;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background-color: red;
-    overflow-x: hidden;
-    transition: 0.3s;
-    z-index: 999; /* Ensure it sits on top of content */
-    /* padding-top: 60px; */
+.filter h3 {
+  font-size: 1.2rem;
+  margin-bottom: 0.5rem;
+  border-bottom: 2px solid #fff;
+  padding-bottom: 0.3rem;
+}
+
+.filter label {
+  font-size: 0.7rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 0.6rem;
+  padding-left: 0.3rem;
+  padding-right: 0.3rem;
+}
+
+.margins {
+  margin: 1rem 0;
+}
+
+.types {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+input[type="checkbox"] {
+  accent-color: #f5e4c3;
+  width: 1rem;
+  height: 1rem;
+  margin-left: 0.5rem;
+  border-radius: 4px;
+}
+
+
+/* .filter { */
+  /* font-size: 0.65vw; */
+  /* font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
+  /* color: #ffffff; */
+  /* width: 16vh; */
+  /* height: 90vh; */
+  /* background-color: #736342; */
+  /* border-radius: 10px; */
+  /*  */
 /* } */
-  
-  /* .FilterBar.open {
-    width: 250px;
-  }
-  
-  .FilterBar ul {
-    list-style-type: none;
-    padding: 0;
-  }
-  
-  .FilterBar li {
-    padding: 10px 15px;
-    text-align: left;
-    color: white;
-  }
-  
-  .FilterBar li:hover {
-    background-color: #575757;
-    cursor: pointer;
-  } */
-
-  .filter {
-    font-size: 0.65vw;
-    font-family: Garamond, serif;
-    color: #ffffff;
-    width: 16vh;
-    height: 90vh;
-    background-color: #85aba8;
-    border-radius: 10px;
-  }
-
-  .filter h3 {
-    font-size: 1vw;
-    margin-top: 1vw;
-  }
-
-  .filter label {
-    font-size: 0.8vw;
-  }
-
-  .margins {
-    margin: 1vw;
-  }
-
-  .types {
-    display: flex; /* Use flexbox for better alignment */
-    align-items: center; /* Vertically align elements */
-    gap: 1px; /* Add space between label and checkbox */
-    margin-bottom: 1vw;
-  }
+/*  */
+/* .filter h3 { */
+  /* font-size: 1vw; */
+  /* margin-top: 1vw; */
+  /* padding: 10px; */
+/* } */
+/* .filter label { */
+  /* font-size: 0.8vw; */
+/* } */
+/*  */
+/* .margins { */
+  /* margin: 1vw; */
+/* } */
+/*  */
+/* .types { */
+  /* display: flex; Use flexbox for better alignment */
+  /* align-items: center; Vertically align elements */
+  /* gap: 1px; Add space between label and checkbox */
+  /* margin-bottom: 1vw; */
+/* } */
