--- a/src/features/searching/SearchBar_Component.css
+++ b/src/features/searching/SearchBar_Component.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     margin-top: 20px;
+    transform: translateX(5%);
 }
 
 .searchbar input {
@@ -12,6 +13,6 @@
     width: 550px;
     border: 5px solid;
     border-radius: 25px;
-    border-color: rgb(105, 57, 57);
-    background-color: #A44A3F;
+    border-color: rgb(61, 55, 46);
+    background-color: #ede4c4;
 }
