--- a/src/features/sorting/SortComponent.css
+++ b/src/features/sorting/SortComponent.css
@@ -4,6 +4,10 @@
     font-family: Garamond, serif;
     color: #ffffff;
     padding-top: 0.25cm;
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    transform: translateX(5%); /* Adjust the % as needed */
 }
 
 .sorting sort_component{
