--- a/src/layouts/Header.css
+++ b/src/layouts/Header.css
@@ -1,14 +1,44 @@
 /* Image styling */
 .head img {
-    width: 100px;
-    height: 100px;
-    margin-right: 20px; /* Space between image and h1 */
+    width: 75px;
+    height: 75px;
+    margin-left: 15px;
+    margin-right: 0px; /* Space between image and h1 */
     border-radius: 10px;
 }
 
+.header_image {
+    position: relative;
+    filter: grayscale(1) brightness(0) invert(1); /* make icon white */
+    z-index: 1;
+  }
+  
+  /* Use a wrapper div to apply gradient overlay */
+  .header_image-wrapper {
+    position: relative;
+    width: 100px;
+    height: 100px;
+  }
+  
+  .header_image-wrapper::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to bottom, red, blue);
+    z-index: 0;
+    border-radius: 10px;
+  }
+
+
+
+
+
 /* Body background color */
 body {
-    background-color: #254441;
+    background-color: #26160b;
 }
 
 /* Header styling */
@@ -22,8 +52,8 @@ body {
 
 /* Site title styling */
 .site_name {
-    font-size: 3em;
-    font-family: Garamond, serif;
+    font-size: 5em;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif, serif;
     color: #ffffff;
     margin: 0;
     padding: 0;
@@ -32,10 +62,30 @@ body {
     text-align: left; /* Align the h1 slightly to the right of the image */
 }
 
+.site_name {
+    font-size: 5em;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif, serif;
+    color: #fdf6e3; /* Soft white */
+    margin: 0;
+    padding: 0;
+    margin-left: 20px;
+    flex-grow: 1;
+    text-align: left;
+  
+    /* Logo-like styling */
+    letter-spacing: 2px;
+    font-weight: bold;
+    text-shadow: 2px 2px 4px rgba(0,0,0,0.4);
+    background: linear-gradient(to right, #f45252, hsl(219, 47%, 60%));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
 /* Login button styling */
 .logInButton {
-    width: 100px;
-    height: 100px;
+    margin-right:10px;
+    width: 50px;
+    height: 50px;
     background-image: url('https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png');
     background-size: contain;
     background-position: center;
