--- a/src/features/filtering/Filter_Bar.css
+++ b/src/features/filtering/Filter_Bar.css
@@ -1,6 +1,6 @@
 .filter {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  background-color: #8a7751;
+  background-color: #cf293f;
   color: #fff;
   padding: 1rem;
   width: 18vh;
