--- a/src/features/filtering/Filter_Bar.css
+++ b/src/features/filtering/Filter_Bar.css
@@ -1,4 +1,5 @@
 .filter {
+  position: fixed;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   background-color: #cf293f;
   color: #fff;
@@ -10,6 +11,7 @@
   flex-direction: column;
   gap: 1.5rem;
   width: 12rem;
+  transform: translateY(18vw);
 }
 
 .filter h3 {
