--- a/src/layouts/Header.css
+++ b/src/layouts/Header.css
@@ -1,17 +1,24 @@
+header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;  
+    background-color: #fcf6e6;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
+  }
+  
+  body {
+    padding-top: 100px; 
+  }
+
 /* Image styling */
 .head img {
     width: 75px;
     height: 75px;
-    margin-left: 15px;
+    margin-left: 0px;
     margin-right: 0px; /* Space between image and h1 */
     border-radius: 10px;
 }
-
-.header_image {
-    position: relative;
-    filter: grayscale(1) brightness(0) invert(1); /* make icon white */
-    z-index: 1;
-  }
   
   /* Use a wrapper div to apply gradient overlay */
   .header_image-wrapper {
@@ -32,10 +39,6 @@
     border-radius: 10px;
   }
 
-
-
-
-
 /* Body background color */
 body {
     background-color: #fff3d6;
@@ -45,21 +48,9 @@ body {
 .head {
     display: flex;
     align-items: center;
-    justify-content: space-between; /* Space between the logo and the button */
+    justify-content: flex-start;  /* Space between the logo and the button */
     padding: 10px;
     border-radius: 10px;
-}
-
-/* Site title styling */
-.site_name {
-    font-size: 5em;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif, serif;
-    color: #ffffff;
-    margin: 0;
-    padding: 0;
-    margin-left: 20px; /* Add space between the image and the h1 */
-    flex-grow: 1; /* Allow h1 to take up remaining space */
-    text-align: left; /* Align the h1 slightly to the right of the image */
 }
 
 .site_name {
@@ -69,8 +60,6 @@ body {
     margin: 0;
     padding: 0;
     margin-left: 20px;
-    flex-grow: 1;
-    text-align: left;
   
     /* Logo-like styling */
     letter-spacing: 2px;
@@ -79,18 +68,60 @@ body {
     background: linear-gradient(to right, #cf293f, #cf293f);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    transition: font-size 0.3s ease;
+  }
+  
+.subtitle {
+  font-size: 1em;
+  font-family: Outfit;
+  color: #cf293f;
+  /* margin-left: 15px; */
+  padding: 10px;
+  margin-top: -20px;
+  margin-left: 120px;
+  transition: font-size 0.3s ease;
+}
+
+header.scrolled .subtitle {
+  font-size: 0.5em;
+  margin-left: 90px;
+  padding: 0px;
+  margin-top: -8px;
+}
+
+
+header.scrolled {
+    padding: 8px 0;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+  }
+  
+  .header_image {
+    transition: all 0.3s ease;
+    height: 60px;
+    width: 60px;
+  }
+  
+  header.scrolled .header_image {
+    height: 50px;
+    width: 50px;
+  }
+  
+  header.scrolled .site_name {
+    font-size: 3rem;
+    margin-left: 15px;
   }
 
-/* Login button styling */
-.logInButton {
-    margin-right:10px;
-    width: 50px;
-    height: 50px;
-    background-image: url('https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png');
-    background-size: contain;
-    background-position: center;
-    background-repeat: no-repeat;
-    border: none;
-    cursor: pointer;
-    border-radius: 30%;
-}
+  .head {
+    display: flex;
+    padding: 10px;
+    border-radius: 10px;
+    /* max-width: 1200px; */
+    margin: 0 auto;
+  }
+  
+  .headerSearch {
+    display: flex;
+    align-items: center;
+    width: 10%;
+    max-width: 1200px; 
+  }
